--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       content="default-src 'self'; script-src 'self'"
     />
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
     <title>Hello from Electron renderer!</title>
   </head>
   <body>
